@@ -19,6 +19,7 @@ set sv_wwwDlDisconnected 0
 set sv_wwwFallbackURL ""
 set sv_fullmsg "Server is full."
 set sv_hostname "ETHost"
+set sv_maxConnsPerIP 4
 set server_motd0 " ^NEnemy Territory ^7MOTD "
 set server_motd1 ""
 set server_motd2 ""
