@@ -269,6 +269,9 @@ Not giving any value will disable the spawntimer.</dd>
 <dd>Resets the enemy spawn timer to the value which was given when timerSet was called.
 This command will do nothing if timerSet hasn't been called before.</dd>
 
+<dt>lua_status</dt>
+<dd>Shows information about the scripts currently loaded by the Lua API engine.</dd>
+
 </dl>
 
 <hr>
