@@ -1,7 +1,7 @@
 #ifndef _ETPUBC_H
 #define _ETPUBC_H
 
-#define ETPUBC_VERSION "20080531"
+#define ETPUBC_VERSION "20080801"
 #define ETPUB_VERSION(a,b,c) (((a) << 16) + ((b) << 8) + (c))
 
 #endif // ifndef _ETPUBC_H
